ajout des variables + code de la page d'acceuil

--- a/fr/index.html
+++ b/fr/index.html
@@ -15,18 +15,136 @@
     <link rel="stylesheet" href="/src/css/style.css" />
 
 </head>
-<header>
-    <a href="index.html"><img src="/asset/icônes/logo.svg" alt="logo"></a>
-    <a href="en/index.html"><img src="/asset/icônes/Great Britain.svg" alt="logo"></a>
-    <button><img src="/asset/icônes/Menu.svg" alt="menu"></button>
-</header>
+
 <body>
     <header>
-    <h1>Le Cinario</h1>
+        <a href="/">
+            <img 
+            class="header__logo" 
+            src="/asset/icônes/logo.svg" 
+            alt="logo"
+            width="65"
+            height="65"
+            ></a>
+        <a href="en/index.html">
+            <img 
+            src="/asset/icônes/Great Britain.svg" 
+            alt="logo">
+        </a>
+        <button
+            class="header__menu-btn menu-btn"
+            aria-label="menu"
+            aria-expanded="false"
+            aria-controls="mainNav"
+            >
+            <img src="/asset/icônes/Menu.svg" alt="menu">
+            <span class="menu-btn" aria-hidden="true"></span>
+        </button>
+        <nav class="header__menu menu" id="mainNav" aria-hidden="true">
+            <ul>
+                <li class="menu__item">
+                    <a class="menu__link" href="camera.html">Caméra</a></li>
+                <li class="menu__item">
+                    <a class="menu__link" href="ready-player-one.html">Ready Player One</a></li>
+                <li class="menu__item">
+                    <a class="menu__link" href="james-cameron.html">James Cameron</a></li>
+                <li class="menu__item">
+                    <a class="menu__link" href="le-film-en-devenir.html">Le FIlm en Devenir</a></li>
+                <li class="menu__item">
+                    <a class="menu__link" href="un-jou-une-musique.html">Un jour une musique</a></li>
+                <li class="menu__item">
+                    <a class="menu__link" href="a-porpos.html">A propos</a></li>
+                <li class="menu__item">
+                    <a class="menu__link" href="glossaire.html">Glossaire</a></li>
+            </ul>
+        </nav>
+        
+        <h1>Le Cinario</h1>
     </header>
+    <main>
+        <div class="hero hero--home">
+            <nav>
+                <ul>
+                    <li class="hero__item"><a class="hero__link" href="actualité.html">Actus<button><img src="/asset/icônes/Documentary.svg" alt="actualité"></button></a></li>
+                    <li class="hero__item"><a class="hero__link" href="films.html">Films<button><img src="/asset/icônes/Film Reel.svg" alt="Films"></button></a></li>
+                    <li class="hero__item"><a class="hero__link" href="realisateur.html">Réalisateurs<button><img src="/asset/icônes/Office Chair.svg" alt="Réalisateur"></button></a></li>
+                    <li class="hero__item"><a class="hero__link" href="musique.html">Musiques<button><img src="/asset/icônes/Music.svg" alt="Musique"></button></a></li>
+                    <li class="hero__item"><a class="hero__link" href="livres.html">Livres<button><img src="/asset/icônes/Book.svg" alt="Livres"></button></a></li>
+                </ul>
+            </nav>
+            <img src="/asset/icônes/Cercle icônes.svg" alt="">
+        </div>
+        <article class="article">
+            <img class="article__img" 
+            src="/asset/img/home/cam.jpg" 
+            alt="L'image montre un astronaute, vêtu d'une combinaison spatiale usée, tenant un vieil appareil photo à pellicule, également abîmé par le temps. L'arrière-plan est flou, mais on devine la courbure de la Terre vue de l'espace.">
+            <a class="article__title title--link" href="camera.html">
+                <h2 class="article__title">Une caméra des années 2000 retrouvée !</h2>
+            </a>
+            <p class="article__text">Une caméra du début du 21e siècle a été retrouvée flottant dans l'espace, soulevant des questions sur son origine et son histoire.</p>
+        </article>
+        <article class="article">
+            <img class="article__img" src="/asset/img/home/rpo.jpg" alt="L'affiche de Ready Player One montre un jeune homme grimpeant une structure métallique, le dos tourné au spectateur. Il est situé dans une ville futuriste dystopique, sombre et surpeuplée, avec une grande planète ou lune visible dans le ciel nocturne. Le titre du film, "READY PLAYER ONE", est inscrit en lettres stylisées, lumineuses et futuristes, au-dessus du personnage.">
+            <a class="article__title title--link" href="">
+                <h2 class="article__title">Un remake de Ready Player One de Steven Spielberg ?</h2>
+            </a>
+            <p class="article__text">En 2500, le cinéma interplanétaire s'apprête à redécouvrir "Ready Player One".</p>
+        </article>
+        <article class="article">
+            <img class="article__img" src="/asset/img/home/js.jpg" alt="L'image montre un portrait de James Cameron, un homme âgé aux cheveux gris et blancs, portant une barbe et une moustache grisonnantes taillées en pointe. Il est vêtu d'une chemise grise foncée. Son expression est sérieuse, presque grave">
+            <a class="article__title title--link" href="james-cameron.html">
+                <h2 class="article__title">James Cameron : Un Visionnaire Cinématographique du 21e Siècle</h2>
+            </a>
+            <p class="article__text">Alors que nous nous penchons sur l’histoire du cinéma, peu de noms se démarquent aussi fortement que celui de James Cameron.</p>
+        </article>
+        <article class="article">
+            <img class="article__img" src="/asset/img/home/lfed.jpg" alt="L'image représente une illustration stylisée d'un cinéma de nuit. Le bâtiment est moderne, avec une façade aux couleurs vives et audacieuses, principalement des teintes turquoise, rouge et orange. Les vitrines du cinéma affichent des affiches de films vintage, ajoutant une touche nostalgique. L'atmosphère générale est nocturne et quelque peu mystérieuse, renforcée par l'éclairage et les reflets sur le sol humide. Le titre "Le Film en Devenir" et le nom de l'artiste, Gérard Leblanc, sont inscrits en bas de l'image. L'ensemble évoque une ambiance rétro-futuriste.">
+            <a class="article__title title--link" href="le-film-en-devenir.html">
+                <h2 class="article__title">Le Film en Devenir de Gérard Leblanc : Un Ouvrage Visionnaire du 21e Siècle</h2>
+            </a>
+            <p class="article__text">En cette année 2500, alors que nous célébrons le 500e anniversaire de la publication de "Le Film en Devenir" de Gérard Leblanc,</p>
+        </article>
+        <article class="article">
+            <img class="article__img" src="/asset/img/home/mrpo.jpg" alt="L'image représente une illustration stylisée d'un cinéma de nuit. Le bâtiment est moderne, avec une façade aux couleurs vives et audacieuses, principalement des teintes turquoise, rouge et orange. Les vitrines du cinéma affichent des affiches de films vintage, ajoutant une touche nostalgique. L'atmosphère générale est nocturne et quelque peu mystérieuse, renforcée par l'éclairage et les reflets sur le sol humide. Le titre "Le Film en Devenir" et le nom de l'artiste, Gérard Leblanc, sont inscrits en bas de l'image. L'ensemble évoque une ambiance rétro-futuriste.">
+            <a class="article__title title--link" href="un-jou-une-musique.html">
+                <h2 class="article__title">Un Jour, Une Musique de Film : La Bande Originale de Ready Player One</h2>
+            </a>
+            <p class="article__text">En cette année 2500, plongeons-nous dans l'histoire fascinante de la bande originale de "Ready Player One”.</p>
+        </article>
+    </main>
+    <footer class="footer">
+        <a class="footer__logo logo--link" href="/">
+            <img 
+            class="footer__logo" 
+            src="/asset/icônes/logo.svg" 
+            alt="logo qui ramène au début de la page"
+            width: 60px;
+            height: 60px;>
+        </a>
+        <h2 class="footer__title">Le Cinario</h2>
+        
+        <nav class="footer__menu">
+            <h2 class="footer__title">Menu</h2>
+            <ul>
+                <li><a href="/">Acceuil</a></li>
+                <li><a href="glossaire.html">Glossaire</a></li>
+                <li><a href="a-porpos.html">A Propos</a></li>
+            </ul>
+        </nav>
 
+        <div class="footer__social social">
+            <nav>
+                <h2>Nous suivres</h2>
+                    <ul>
+                        <li class="social__items"><a class="social__link" href="https://www.instagram.com"><img class="social__img" src="/asset/icônes/Instagram.svg" alt=""></a></li>
+                        <li class="social__items"><a class="social__link" href="https://discord.com"><img class="social__img" src="/asset/icônes/Discord.svg" alt=""></a></li>
+                        <li class="social__items"><a class="social__link" href="https://www.youtube.com"><img class="social__img" src="/asset/icônes/YouTube.svg" alt=""></a></li>
+                        <li class="social__items"><a class="social__link" href="https://x.com/?lang=fr"><img class="social__img" src="/asset/icônes/Mask group-1.svg" alt=""></a></li>
+                        <li class="social__items"><a class="social__link" href="https://www.facebook.com/?locale=fr_FR"><img class="social__img" src="/asset/icônes/Facebook.svg" alt=""></a></li>
+                    </ul>
+            </nav>
+        </div>
+        <p>Projet réalisé dans le cadre d’un exercice pédagogique au département MMi de Montbéliard.</p>
+    </footer>
 </body>
-<footer>
-
-</footer>
 </html>
