--- a/fr/actualité.html
+++ b/fr/actualité.html
@@ -48,7 +48,7 @@
             </ul>
         </nav>
         
-        <h1>Le Cinario</h1>
+        <h1>Actualité</h1>
     </header>
     <main>
         <div class="hero hero--home">
