ajout de la page des réalisateurs

--- a/fr/films.html
+++ b/fr/films.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Actualite</title>
+    <title>Films</title>
 </head>
 <body>
     <header>
@@ -102,7 +102,7 @@
         <nav class="footer__menu">
             <h2 class="footer__title">Menu</h2>
             <ul>
-                <li><a href="/">Acceuil</a></li>
+                <li><a href="index.html">Acceuil</a></li>
                 <li><a href="glossaire.html">Glossaire</a></li>
                 <li><a href="a-porpos.html">A Propos</a></li>
             </ul>
