--- a/fr/actualité.html
+++ b/fr/actualité.html
@@ -102,7 +102,7 @@
         <nav class="footer__menu">
             <h2 class="footer__title">Menu</h2>
             <ul>
-                <li><a href="/">Acceuil</a></li>
+                <li><a href="index.html">Acceuil</a></li>
                 <li><a href="glossaire.html">Glossaire</a></li>
                 <li><a href="a-porpos.html">A Propos</a></li>
             </ul>
