--- a/fr/actualité.html
+++ b/fr/actualité.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <a href="/">
+        <a href="index.html">
             <img 
             class="header__logo" 
             src="/asset/icônes/logo.svg" 
