ajout de la structure HTML pour la page des livres

--- a/fr/actualité.html
+++ b/fr/actualité.html
@@ -89,7 +89,7 @@
     </main>
         
     <footer class="footer">
-        <a class="footer__logo logo--link" href="/">
+        <a class="footer__logo logo--link" href="actualité.html">
            <img 
             class="footer__logo" 
             src="/asset/icônes/logo.svg" 
