--- a/fr/index.html
+++ b/fr/index.html
@@ -113,7 +113,7 @@
         </article>
     </main>
     <footer class="footer">
-        <a class="footer__logo logo--link" href="/">
+        <a class="footer__logo logo--link" href="index.html">
             <img 
             class="footer__logo" 
             src="/asset/icônes/logo.svg" 
