--- a/fr/musique.html
+++ b/fr/musique.html
@@ -48,7 +48,7 @@
             </ul>
         </nav>
         
-        <h1>Réalisateurs</h1>
+        <h1>Musiques</h1>
     </header>
     <main>
         <div class="hero hero--home">
@@ -89,7 +89,7 @@
     </main>
         
     <footer class="footer">
-        <a class="footer__logo logo--link" href="/">
+        <a class="footer__logo logo--link" href="musique.html">
            <img 
             class="footer__logo" 
             src="/asset/icônes/logo.svg" 
