--- a/fr/realisateur.html
+++ b/fr/realisateur.html
@@ -89,7 +89,7 @@
     </main>
         
     <footer class="footer">
-        <a class="footer__logo logo--link" href="/">
+        <a class="footer__logo logo--link" href="realisateur.html">
            <img 
             class="footer__logo" 
             src="/asset/icônes/logo.svg" 
