--- a/fr/index.html
+++ b/fr/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-        <a href="/">
+        <a href="index.html">
             <img 
             class="header__logo" 
             src="/asset/icônes/logo.svg" 
