création de la page James Cameron

--- a/fr/camera.html
+++ b/fr/camera.html
@@ -58,6 +58,7 @@
         </nav>
     </header>
     <main class="sujet">
+        <h1>Camera</h1>
         <h2 class="sujet__title">Une caméra des années 2000 retrouvée !</h2>
         <img class="sujet__img" src="/asset/img/camera/cam.jpg" alt="L'image montre un astronaute, vêtu d'une combinaison spatiale usée, tenant un vieil appareil photo à pellicule, également abîmé par le temps. L'arrière-plan est flou, mais on devine la courbure de la Terre vue de l'espace.">
         <h4 class="sujet__chapo">Aussi surprenant qu’inattendu, une caméra datant du début du 21è siècle a été récemment retrouvée flottante dans l’espace. Cette découverte soulève de nombreuses questions sur son origine, son parcours et les histoire qu’elle pourrait contenir. Dans cet article, nous plongerons dans les détails de cette découverte fascinante.</h4>
