--- a/fr/ready-player-one.html
+++ b/fr/ready-player-one.html
@@ -15,7 +15,7 @@
 
 </head>
 <body>
-    <header>
+    <header class="header">
         <a href="index.html">
             <img 
             class="header__logo" 
