Update language settings and add redirection for language selection

--- a/fr/index.html
+++ b/fr/index.html
@@ -26,7 +26,8 @@
             width="65"
             height="65"
             ></a>
-        <a href="en/index.html">
+        <a href="en/index.html" onclick="document.cookie = 
+        `nf_lang=fr; path=/ ; SameSite=Strict`">
             <img 
             src="/asset/icônes/Great Britain.svg" 
             alt="logo">
