--- a/en/index.html
+++ b/en/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+<a href="/fr/index.html"onclick="document.cookie = 
+`nf_lang=fr; path=/ ; SameSite=Strict`">
 </head>
 <body>
     
