--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
         </a>
         <h2 class="footer__title">Le Cinario</h2>
         
-        <nav class="footer__menu">
-            <h2 class="footer__title">Menu</h2>
+        <nav class="footer__menu ">
+            <h2 class="footer__menu-title">Menu</h2>
             <ul>
-                <li><a href="/">Acceuil</a></li>
-                <li><a href="glossaire.html">Glossaire</a></li>
-                <li><a href="a-porpos.html">A Propos</a></li>
+                <li class="footer__menu-link"><a href="/">Acceuil</a></li>
+                <li class="footer__menu-link"><a href="glossaire.html">Glossaire</a></li>
+                <li class="footer__menu-link"><a href="a-porpos.html">A Propos</a></li>
             </ul>
         </nav>
 
