--- a/fr/livres.html
+++ b/fr/livres.html
@@ -70,7 +70,7 @@
                     <li class="hero__item"><a class="hero__link" href="livres.html">Livres<button><img src="/asset/icônes/Book.svg" alt="Livres"></button></a></li>
                 </ul>
             </nav>
-            <img src="/asset/icônes/Cercle icônes.svg" alt="">
+            <img class="hero--home__livre" src="/asset/icônes/Cercle icônes.svg" alt="">
         </div>
         <article class="article">
             <img class="article__img" src="/asset/img/livres/livre.jpg" alt="">
