--- a/fr/realisateur.html
+++ b/fr/realisateur.html
@@ -72,7 +72,7 @@
                     <li class="hero__item"><a class="hero__link" href="livres.html">Livres<button><img src="/asset/icônes/Book.svg" alt="Livres"></button></a></li>
                 </ul>
             </nav>
-            <img src="/asset/icônes/Cercle icônes.svg" alt="">
+            <img class="hero--home__real" src="/asset/icônes/Cercle icônes.svg" alt="">
         </div>
         <article class="article">
             <img class="article__img" src="/asset/img/realisateur/js.jpg" alt="">
